2007-11-12  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.glade: Jabber priority is
	in the range -128 127 (Laurent Bigonville).

2007-11-11  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.c:
	* src/empathy-call-chandler.c:
	* src/org.gnome.Empathy.Chat.service.in:
	* src/empathy-chat-chandler.c:
	* src/empathy.c:
	* src/Makefile.am: Move chats to its own process.

2007-11-07  Xavier Claessens  <xclaesse@gmail.com>

	* src/org.gnome.Empathy.Call.service.in:
	* src/Makefile.am: Install empathy-call-chandler to $libexecdir.

2007-11-06  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-jabber.glade:
	* libempathy-gtk/empathy-account-widget-jabber.c: Allow to change jabber
	priority. Fixes bug #493992 (Laurent Bigonville).

2007-11-04  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c: Display error message when an
	account failed to connect. Based on Gossip's code.

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Call ClearAvatar if the data
	is NULL or size <= 0 in empathy_contact_factory_set_avatar().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-avatar-chooser.c:
	* libempathy-gtk/empathy-avatar-chooser.h:
	* python/pyempathy/pyempathy.defs:
	* libempathy/empathy-contact-factory.c:
	* libempathy/empathy-contact-factory.h: Rename
	empathy_contact_factory_set_name() to _set_alias(). Implements
	empathy_contact_factory_set_avatar(). Return the mime_type in
	empathy_avatar_chooser_get_image_data().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c: Unref contact returned by
	empathy_contact_factory_get_user().

2007-11-03  Xavier Claessens  <xclaesse@gmail.com>

	* src/empathy.c: Make use of gtk_init_with_args for command line
	parsing. Fixes bug #491985 (Basilio Kublik).
