@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=org.gnome.Empathy.Call
+Name=org.gnome.Empathy.CallChandler
 Exec=@libexecdir@/empathy-call-chandler
