@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=org.gnome.Empathy.Chat
+Name=org.gnome.Empathy.ChatChandler
 Exec=@libexecdir@/empathy-chat-chandler
